tests/baselines/reference/tsxElementResolution5.errors.txt
file1.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file1.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    }
    
    // OK, but implicit any
    <div n='x' />;
    